	  positions getting assigned a non-existent sequence.
	- Document xmp_set_position/xmp_next_position/xmp_prev_position
	  interactions with xmp_stop_module/xmp_restart_module.
	- Fix stack underflow in Pha Packer loader (CVE-2025-47256).
	- Slight performance improvements for the Oktalyzer and SFX loaders.
	- Fix broken conversion of ProRunner 2.0 pattern data.
	Changes by Thomas Neumann:
	- Fix the pattern loop effect in Astroidea XMF loader.
	- Fix loading of Extreme Pinball modules.

4.6.2 (20250224):
	Changes by Alice Rowan:
	- Fix MED effect 1Fxy (delay and retrigger). The new implementation
	  supports both delay and retrigger at the same time and repeats.
	- Fix MED effect FF3 (revert change from 4.6.1). The buggy version
	  of this effect prior to OctaMED v5 is not currently supported.
	- Fix MED3 and MED4 time factor and tempos 1-10.
	- Fix MED4 effect 9xx (set speed).
	- Add support for MED3 and MED4 song files.
	- Better MED MMD tracker version fingerprinting.
	- Fix loading external instruments from the current directory.
	Changes by Thomas Neumann:
	- Fix oxm modules with empty samples (e.g.: The Four Ages.oxm)
	- Fix some modules would be misidentified as Scream Tracker 2.
	- Handle IT modules with edit history but no midi configuration
	Changes by Ozkan Sezer:
	- Revert a bad CVE fix to the miniz inflate code
	- Add missing HAVE_DIRENT definition to Android makefile.

4.6.1 (20250101):
	Changes by Claudio Matsuoka:
	- The full library is now under MIT license
	Changes by Alice Rowan:
	- Add stereo sample loading support for IT, S3M, XM, MED, LIQ, and
	  Digital Tracker (partial).
	- Add sample preamplification to filter mixers for high sample rates.
	- Add support for Ultra Tracker tempo commands.
	- Load Ultra Tracker comments instead of skipping them.
	- Implement support for Protracker instrument swapping.
	- Implement retrigger effects for MED, OctaMED, and Liquid Tracker
	  where only one retrigger occurs. Liquid Tracker (new format) and